# pari

./: .gitignore  CMakeLists.txt  NOTES.msvc  paricfg.h  testlinking.c
src/basemath/: lfun.c  random.c
src/gp/: gp.c
src/graph/: plotport.c
src/headers/: pari.h
src/language/: default.c  es.c  gplib.c  init.c
src/modules/: ratpoints.c
